rust/03-procedural-macro/tests/08-unrecognized-attribute.stderr
error: expected `builder(each = "...")`
  --> tests/08-unrecognized-attribute.rs:19:14
   |
19 |     #[builder(eac = "arg")]
   |              ^^^^^^^^^^^^^
